<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_controbar_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/controlbar_playing_bg"
        android:gravity="center"
        android:layerType="software">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:progressDrawable="@drawable/seekbar_progress"
            android:splitTrack="false"
            android:thumb="@drawable/playing_control_time"

            />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/music_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <ImageButton
            android:id="@+id/red_music_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@mipmap/playing_cover_lp" />

        <ImageButton
            android:id="@+id/music_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:background="@android:color/transparent"
            android:paddingTop="20dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/playing_lp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"

            android:layout_marginRight="16dp"

            android:gravity="right">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/playing_stylus_lp_bg" />

            <ImageButton
                android:id="@+id/needle_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/needle_shadow2" />

            <ImageButton
                android:id="@+id/stylus_lp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/playing_stylus_lp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@mipmap/playing_stylus_lp_top" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="58dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/music_pre"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/image_up_button_selector" />

        <ImageButton
            android:id="@+id/music_next"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/image_next_button_selector" />

        <ImageButton
            android:id="@+id/music_play"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/music_pre"
            android:layout_alignStart="@+id/music_pre"
            android:layout_alignTop="@+id/music_pre"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/image_button_pause_selector" />
    </RelativeLayout>

</LinearLayout>