...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="分享" />

        <Button
            android:id="@+id/button_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="评论" />
    </LinearLayout>

</LinearLayout>
</android.support.v7.widget.CardView>
